@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 20XX-XX-XX  Release 7.3X.X                                     ---
 ----------------------------------------------------------------------
 
+* Creo converter always writes out CREO_NAME attribute - Sean Morrison
 * improved gdiff -F filtering option behavior - Cliff Yapp
 * improved gdiff command verbosity reporting options - Cliff Yapp
 * improved Combination Editor button behaviors in MGED - Sean Morrison
